--- a/myops2/www/templates/layout.html
+++ b/myops2/www/templates/layout.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <title>MyOps 2</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css') }}">
+<link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap-theme.min.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+<script src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
 <div class=page>
   <h1>MyOps2</h1>
   <div class=metanav>
