fix sql query for retreiving the status of the nodes

--- a/myops2/www/templates/status.html
+++ b/myops2/www/templates/status.html
@@ -1,11 +1,14 @@
 {% extends "layout.html" %}
 {% block body %}
   <table class="table table-striped">
-  <tr>
+  
   {% for r in resources %}
+  <tr>
     <td>{{ r.hostname }}</td>
+    <td>{{ r.status }}</td>
     <td>{{ r.last_checked }}</td>
-  {% endfor %}
   </tr>
+  {% endfor %}
+  
   </table>
 {% endblock %}
