--- a/myops2/www/templates/status.html
+++ b/myops2/www/templates/status.html
@@ -5,6 +5,8 @@
   {% for r in resources %}
   <tr>
     <td>{{ r.hostname }}</td>
+    <td>{{ r.ipv4 }}</td>
+    <td>{{ r.ipv6 }}</td>
     <td>{{ r.status }}</td>
     <td>{{ r.last_checked }}</td>
   </tr>
