--- a/myops2/web/templates/layout.html
+++ b/myops2/web/templates/layout.html
@@ -4,8 +4,10 @@
     <title>MyOps 2</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <!--<link rel="stylesheet" type="text/css" href="/static/css/style.css">-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-2.1.4.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     {% block head %}{% end %}
   </head>
